--- a/app1/pubspec.yaml
+++ b/app1/pubspec.yaml
@@ -32,9 +32,11 @@ dependencies:
     sdk: flutter
   characters: ^1.4.0
   http: ^1.4.0
+  sqflite: ^2.4.2
+  path : ^1.8.0
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+# The following adds the Cupertino Icons font to your application.
+# Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
